# bilivideo-transcribe-rss

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/bilivideo_transcribe_rss/: __init__.py  constant.py  download.py  feed.py  utils.py  whisper.py
src/scripts/: __init__.py
